# fastAPI-example

./: main.py  pyproject.toml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 02027c22b09e_create_user_model.py
backend/api/: deps.py  router.py
backend/api/routes/: home.py  items.py  login.py  users.py
backend/app/api/: routers.py  sche_base.py
backend/app/auth/: routers.py
backend/app/user/: models.py  routers.py  schemas.py  services.py
backend/celery_tasks/: __init__.py
backend/core/: celery_app.py  config.py  security.py
backend/core/crud/: base.py
backend/core/db/: base.py  deps.py
backend/core/exceptions/: base.py  handlers.py
backend/core/helpers/: paging.py
backend/core/permissions/: base.py
backend/core/utils/: common.py  security.py
backend/crud/: __init__.py  base.py  item.py  user.py
backend/db/: base_class.py  session.py
backend/middlewares/: authentication.py
backend/migrations/: env.py
backend/migrations/versions/: d6c0f2cca345_added_user_and_item_table.py
backend/models/: base.py  item.py  user.py
backend/schemas/: item.py  user.py
backend/settings/: config.py
backend/user-guide/developer/: alembic_cmd.md  env_settings.md
src/config/: database.py  general.py
